Completed jump feature with clickable anchors. Avatar URL now based on server URL to avoid http / https mismatches

--- a/bffConn/src/main/webapp/bffConnBase.css
+++ b/bffConn/src/main/webapp/bffConnBase.css
@@ -428,3 +428,6 @@ h1 {
     left: auto !important;
 }
 
+.jumpAnchor {
+    cursor: pointer;
+}
